modifying server's ML

--- a/zzapsinsa/real_zzapsinsa/app/src/main/res/layout/activity_chat.xml
+++ b/zzapsinsa/real_zzapsinsa/app/src/main/res/layout/activity_chat.xml
@@ -9,23 +9,23 @@
         android:id="@+id/question"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="161dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="105dp"
-        android:ems="10"
-        android:hint="Question"
-        android:inputType="textPersonName"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="123dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="116dp"
+        android:hint="QUESTION"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/ask"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <Button
         android:id="@+id/ask"
-        android:layout_width="161dp"
-        android:layout_height="67dp"
-        android:layout_marginBottom="94dp"
+        android:layout_width="211dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="104dp"
         android:text="Ask to chatbot"
         app:layout_constraintBottom_toTopOf="@+id/answer"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,10 +36,11 @@
         android:id="@+id/answer"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginBottom="201dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="84dp"
         android:text="ANSWER"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
