--- a/zzapsinsa/real_zzapsinsa/app/src/main/res/layout/activity_chat.xml
+++ b/zzapsinsa/real_zzapsinsa/app/src/main/res/layout/activity_chat.xml
@@ -5,14 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <EditText
         android:id="@+id/question"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="123dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="116dp"
+        android:layout_marginStart="47dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginBottom="84dp"
         android:hint="QUESTION"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/ask"
@@ -20,30 +21,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <Button
-        android:id="@+id/ask"
-        android:layout_width="211dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="104dp"
-        android:text="Ask to chatbot"
-        app:layout_constraintBottom_toTopOf="@+id/answer"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/question" />
-
-    <TextView
+    <EditText
         android:id="@+id/answer"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginEnd="44dp"
-        android:layout_marginBottom="84dp"
-        android:text="ANSWER"
+        android:layout_marginStart="58dp"
+        android:layout_marginEnd="58dp"
+        android:layout_marginBottom="137dp"
+        android:hint="answer"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ask" />
+
+    <Button
+        android:id="@+id/ask"
+        android:layout_width="255dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="99dp"
+        android:text="Ask to chatbot"
+        app:layout_constraintBottom_toTopOf="@+id/answer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/question" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
